fix(portal): Alignment of APIs
Closes gravitee-io/issues#695

--- a/src/management/api/_api.scss
+++ b/src/management/api/_api.scss
@@ -318,3 +318,7 @@ api-creation {
 .md-chips {
   font-size: 12px;
 }
+
+.no-view {
+  height: 19px;
+}
